--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    FavBox
   </title>
 </head>
 
